# bytetrack-cpp-template

./: CMakeLists.txt  README.md
bytetrack/: CMakeLists.txt
bytetrack/include/: BYTETracker.h  BytekalmanFilter.h  STrack.h  dataType.h  lapjv.h
bytetrack/source/: BytekalmanFilter.cpp  lapjv.cpp
bytetrack_demo/: CMakeLists.txt
bytetrack_demo/src/: main.cpp
tracking_benchmark/: VID_20240204_094649_000029.json  VID_20240204_094649_000030.json  VID_20240204_094649_000031.json  VID_20240204_094649_000032.json  VID_20240204_094649_000033.json  VID_20240204_094649_000034.json  VID_20240204_094649_000035.json  VID_20240204_094649_000036.json  VID_20240204_094649_000037.json  VID_20240204_094649_000038.json  VID_20240204_094649_000039.json  VID_20240204_094649_000040.json  VID_20240204_094649_000041.json  VID_20240204_094649_000042.json  VID_20240204_094649_000043.json  VID_20240204_094649_000044.json  VID_20240204_094649_000045.json  VID_20240204_094649_000046.json  VID_20240204_094649_000047.json  VID_20240204_094649_000048.json  VID_20240204_094649_000049.json  VID_20240204_094649_000050.json  VID_20240204_094649_000051.json  VID_20240204_094649_000052.json  VID_20240204_094649_000053.json  VID_20240204_094649_000054.json  VID_20240204_094649_000055.json  VID_20240204_094649_000056.json  VID_20240204_094649_000057.json  VID_20240204_094649_000058.json  VID_20240204_094649_000059.json  VID_20240204_094649_000060.json  VID_20240204_094649_000061.json  VID_20240204_094649_000062.json  VID_20240204_094649_000063.json  VID_20240204_094649_000064.json  VID_20240204_094649_000065.json  VID_20240204_094649_000066.json  VID_20240204_094649_000067.json  VID_20240204_094649_000068.json  (+329 more)
utils/: generate_gif.py
